testdata/golden/sema/invalid/signal_not_supported.fmt
// Test that signal is rejected as v2+ feature

fn test_signal() {
    signal x := 42;
}
